bugfixes: - cancel workspace creation - what to do if workspace location on filesystem was removed